<resources>
    <string name="app_name">BMI Calculator Premium Ver.</string>
    <string name="hint_weight">Enter weight(kg)</string>
    <string name="hint_height">Enter height(cm)</string>
    <string name="warn_height">Height leh? Pokemon ah?</string>
    <string name="warn_weight">Weight leh? Doraemon ah?</string>
    <string name="bmi">BMI</string>
    <string name="under">Your BMI is underweight</string>
    <string name="normal">Your BMI is normal</string>
    <string name="over">Your BMI is overweight</string>
    <string name="calculate">Calculate</string>
    <string name="reset">Reset</string>
    <string name="info">The Body Mass Index (BMI) is a handy tool to measure overweight and obesity. It can be calculated with your weight and height.</string>
</resources>